--- a/backend/internship-portal-api/src/main/resources/application.properties
+++ b/backend/internship-portal-api/src/main/resources/application.properties
@@ -2,8 +2,8 @@ spring.application.name=internship-portal-api
 server.port=8080
 
 spring.datasource.url=jdbc:mysql://localhost:3306/internship_portal?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=Asia/Colombo
-spring.datasource.username=intern_user
-spring.datasource.password=StrongPassword123!
+spring.datasource.username=root
+spring.datasource.password=123456
 
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=true
