--- a/backend/internship-portal-api/src/main/resources/application.properties
+++ b/backend/internship-portal-api/src/main/resources/application.properties
@@ -1,3 +1,7 @@
+app.jwt.secret=12345678901234567890123456789012
+app.jwt.expiration-minutes=120
+
+
 spring.application.name=internship-portal-api
 server.port=8080
 
@@ -8,3 +12,10 @@ spring.datasource.password=123456
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
+# File uploads
+app.upload.dir=${UPLOAD_DIR:uploads}
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+
+
